--- a/ui/style.css
+++ b/ui/style.css
@@ -1,5 +1,13 @@
 body{
  background : grey;
- width : 75%;
-
-}
+ margin-right : 10%;
+ margin-left : 10%;
+ }
+ 
+ #head
+ {
+  width : 100%;
+  height : 50px;
+  background : black;
+ }
+ 
