--- a/ui/style.css
+++ b/ui/style.css
@@ -10,4 +10,11 @@ body{
   height : 50px;
   background : black;
  }
- 
+ #img1
+ {
+     width: 48px;
+     height :48px;
+     border-radius: 5px;
+     margin-left: 5px;
+     float : left;
+ }
