--- a/ui/style.css
+++ b/ui/style.css
@@ -7,7 +7,7 @@ body{
  #head
  {
   width : 100%;
-  height : 50px;
+  height : 70px;
   background : black;
  }
  #img1
@@ -17,4 +17,10 @@ body{
      border-radius: 5px;
      margin-left: 5px;
      float : left;
+ }
+ #headm
+ {
+     float: right;
+     color : white;
+     text-align : center;
  }
