--- a/ui/style.css
+++ b/ui/style.css
@@ -12,10 +12,10 @@ body{
  }
  #img1
  {
-     width: 48px;
-     height :48px;
+     width: 60px;
+     height :60px;
      border-radius: 5px;
-     margin-left: 5px;
+     margin: 5px 5px 5px 5px;
      float : left;
  }
  #headm
