--- a/ui/style.css
+++ b/ui/style.css
@@ -9,11 +9,12 @@ body{
   width : 100%;
   height : 70px;
   background : black;
+  border-radius : 3px;
  }
  #img1
  {
-     width: 60px;
-     height :60px;
+     width: 59px;
+     height :59px;
      border-radius: 5px;
      margin: 5px 5px 5px 5px;
      float : left;
@@ -23,4 +24,5 @@ body{
      float: right;
      color : white;
      text-align : center;
+     padding-right : 40%; 
  }
