--- a/ui/style.css
+++ b/ui/style.css
@@ -30,5 +30,7 @@ body{
      text-decoration: none;
      font-size:250%;
      color: white;
-     
- }
+     }
+.link{
+    padding : 10px 0 0 10px;
+}
