--- a/ui/style.css
+++ b/ui/style.css
@@ -3,13 +3,21 @@ body{
  margin-right : 10%;
  margin-left : 10%;
  }
- 
- .head
+ nav
+ {
+     width : 100%;
+  height : 70px;
+  background : black;
+  border-radius : 3px;
+  text-align: center;
+ }
+ #head
  {
   width : 100%;
   height : 70px;
   background : black;
   border-radius : 3px;
+  text-align: center;
  }
  #img1
  {
@@ -28,7 +36,7 @@ body{
  }
  a{
      text-decoration: none;
-     font-size:250%;
+     font-size:150%;
      color: white;
      }
 .link{
