[imad-console] Updates ui/style.css

--- a/ui/style.css
+++ b/ui/style.css
@@ -19,6 +19,12 @@ body{
   border-radius : 3px;
   text-align: center;
  }
+ #pro
+ {
+     width : 150%;
+     height:200%;
+     
+ }
  #img1
  {
      width: 59px;
