--- a/ui/style.css
+++ b/ui/style.css
@@ -1,50 +1,12 @@
-body{
- background : grey;
- 
- }
- nav
- {
-     width : 100%;
-   height : 30px;
-  background : black;
-  border-radius : 3px;
-
- }
- #head
- {
-  width : 100%;
-  height : 70px;
-  background : black;
-  border-radius : 3px;
-  text-align: center;
- }
- #pro
- {
-     margin-left: 40%;
-     width : 250px;
-     height:250px;
-     
- }
- #img1
- {
-     width: 59px;
-     height :59px;
-     border-radius: 5px;
-     margin: 5px 5px 5px 5px;
-     float : left;
- }
- #headm
- {
-     float: right;
-     color : white;
-     text-align : center;
-     padding-right : 37%; 
- }
- a{
-     text-decoration: none;
-     font-size:150%;
-     color: white;
-     }
-.link{
-    margin : 30px 0 0 10px;
+body
+{
+    margin : 0 0 0 0;
+    padding : 0 0 0 0;
+}
+.container
+{
+    width : 70%;
+    margin-left : 15% ;
+    margin-right: 15%;
+    background : gery;
 }
